# ttq-telegram-platform

./: .dockerignore  .env.dev  .env.example  .env.prod  .env.staging  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  alembic.ini  check_org.py  docker-compose.yml  mypy.ini  pyproject.toml  tage 2 backend + tg_bot  описание проэкта.txt
alembic/: alembic.ini  env.py  script.py.mako
alembic/versions/: 2025_08_24_000001_init.py  2025_08_26_000002_accounts.py  2025_08_26_000003_bots_enrich.py  2025_08_27_000004_orgs_fix_timestamps.py
backend/: Dockerfile  pytest.ini
backend/app/: __init__.py  main.py
backend/app/adapters/telegram/: bot.py  run.py
backend/app/api/: deps.py
backend/app/api/v1/routers/: bots.py  celery_ping.py  db_health.py  debug.py  health.py  org_users.py  organizations.py  tasks.py  users.py
backend/app/api/v1/schemas/: bot.py  org_user.py  organization.py  task.py  user.py
backend/app/core/: config.py  logging_config.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  base.py  bot.py  org_user.py  organization.py  user.py
backend/app/services/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_bots_api.py  test_organizations.py  test_tasks.py  test_users_and_org_users.py  test_users_patch.py
frontend/: README.md
ops/: README.md
workflows/: ci.yml
