[tool.poetry]
name = "ttq-telegram-platform"
version = "0.1.0"
description = "Stage 0 skeleton for a managed Telegram presence platform"
authors = ["TTQ"]
readme = "README.md"
packages = [{ include = "app", from = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-json-logger = "^2.0.7"
redis = "^5.0.4"
celery = "^5.4.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.7.0"
pytest = "^8.2.0"
types-redis = "^4.6.0.20240425"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","Q","S","TID","SIM","PL","RUF"]
ignore = [
  "S101",  # allow asserts in tests
]
fix = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
